Fixing alignment

--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -52,11 +52,14 @@
 }
 
 @media (min-width: 768px) {
+  .hero-section {
+    padding: 0;
+  }
   .hero-center {
     display: flex;
     flex-direction: column;
-    height: 100%;
-    height: 100%;
+    height: 100vh;
+    overflow-y: hidden;
   }
 
   .name-container {
@@ -67,16 +70,18 @@
     width: 100%;
     border-bottom: 0.4px solid black;
     font-family: $primary-title;
-    min-height: 200px;
+    height: 25%;
+    
     
   }
   .link-container {
     width: 8%;
     border-right: 0.5px solid black;
-    height: 100%;
+  
     display: flex;
-    align-items: end;
-    padding: 10% 1.4%;
+    align-items: center;
+    justify-content: center;
+    padding: 5% 1.4%;
   }
 
   .text-container {
